--- a/public/index.css
+++ b/public/index.css
@@ -71,3 +71,19 @@ body{
     width: 100px;
     height: 100px;
 }
+
+.card-container{
+    display: flex; flex-direction: row; justify-content: flex-start; margin-bottom: 1em;
+}
+
+.card-data{
+    background: rgba(0, 255, 255, 0.4);
+    border: 1px solid rgba(0, 0, 255, 0.25);
+    border-radius: 10px;
+    min-width: 200px;
+    max-width: 200px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 1em;
+}
